--- a/dmp@.service
+++ b/dmp@.service
@@ -1,10 +1,9 @@
 [Unit]
-Description=DarkMultiPlayer %I Server (in screen)
+Description=DarkMultiPlayer %I Server
 After=network.target
 
 [Service]
-ExecStart=/usr/bin/screen -dmS dmp-%I /usr/bin/mono /opt/dmp/%I/DMPServer.exe
-ExecStop=/usr/bin/screen -S dmp-%I -X stuff "/shutdown\r"; /bin/sleep 5
+ExecStart=/usr/bin/mono /opt/dmp/%I/DMPServer.exe
 Type=forking
 User=jebediah
 Group=jebediah
