Changed permissions and tabs

--- a/dmp@.service
+++ b/dmp@.service
@@ -4,7 +4,7 @@ After=network.target
 
 [Service]
 ExecStart=/usr/bin/mono /opt/dmp/%I/DMPServer.exe
-Type=forking
+Type=simple
 User=jebediah
 Group=jebediah
 
